Addressing review comments

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -21,6 +21,7 @@ suites:
         aws_access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
         aws_secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
         aws_session_token: <%= ENV['AWS_SESSION_TOKEN'] %>
+        region: 'us-east-1'
       records:
         generic_record:
           name: 'kitchen-test.yourdomain.org'
